# omop-cdm

./: 00-setup.py  1-data-ingest.py  2-omop531-cdm-setup.sql  3-omop-vocab-setup.sql  4-omop531-etl-synthea.sql  5-CHF-cohort-building.py  6-drug-analysis.py  7-sample-omop-queries.sql  databricks.yml
.github/workflows/: bundle-ci.yml  integration-test-aws-pr.yml  integration-test-gcp-pr.yml  integration-test-msa-pr.yml
resources/: omop_app.yml  omop_app_gradio.yml  omop_catalog.yml  omop_dashboard.yml  omop_healthcheck.yml  omop_job.yml
src/app/: .env.example  app.py  app.yaml  requirements-dev.txt  requirements.txt
src/app/static/: app.js  index.html  styles.css
src/app/tests/: conftest.py  test_endpoints.py
src/app_gradio/: .env.example  app.py  app.yaml  omop_lib  requirements-dev.txt  requirements.txt
src/app_gradio/tests/: conftest.py  test_handlers.py
src/dashboards/: healthcheck.lvdash.json
src/functions/: omop_functions.sql
src/genie/: create_genie_space.py  genie_config.yml  pyproject.toml  requirements.txt
src/healthcheck/: omop_healthcheck.py
src/omop_lib/: pyproject.toml
src/omop_lib/omop_lib/: __init__.py  config.py  diagnostics.py  exceptions.py  queries.py  warehouse.py
src/omop_lib/tests/: conftest.py  test_config.py  test_diagnostics.py  test_queries.py
src/views/: genie_views.sql
