[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omop-genie"
version = "0.1.0"
description = "Lifecycle CLI for the OMOP Genie Space."
requires-python = ">=3.10"
dependencies = [
  "databricks-sdk>=0.38.0,<1.0",
  "PyYAML>=6.0,<7.0",
]

[project.scripts]
omop-genie = "create_genie_space:main"

[tool.setuptools]
py-modules = ["create_genie_space"]
